--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <html>
-    <head>
-    this is head !
-    </head>
-    <body>
-        Seem works ok !
-    </body>
+
+<head>
+    <title>
+        http_server
+    </title>
+</head>
+
+<body>
+    <center>
+        <h1>
+            Seem works ok !
+        </h1>
+    </center>
+</body>
+
 </html>
